--- a/site_cercle/css/style.css
+++ b/site_cercle/css/style.css
@@ -101,6 +101,14 @@ img
  	margin-bottom: 0.67em;
  }
 
+h2
+{
+	font-size: 1em;
+	text-align: center;
+	color: rgb(96, 25, 13);
+	margin: 0;
+	margin-bottom: 0.67em;
+}
 .centreur
 {
 	display: flex;
@@ -197,7 +205,7 @@ img
 	color: white;
 	padding: 10px;
 	width:  100%;
-	font-size: 0.9em;
+	font-size: 1.2em;
 	white-space:nowrap;
 }
 
@@ -208,6 +216,8 @@ img
 	padding: 10px;
 	width:  100%;
 	color: black;
+	/*white-space:nowrap;
+	width: 100%;*/
 }
 
 .color_1
@@ -628,11 +638,12 @@ input {
 
  .classement
  {
+	 width: 100%;
 	 display: flex;
 	 flex-direction: column;
-	 margin: 20px;
+	/* margin: 20px;
 	 border: solid black 2px;
-	 border-radius: 10px;
+	 border-radius: 10px;*/
  }
 
 
