spc: skills/progressbar

--- a/angular/site-perso-corentin/src/app/projects/projects-home/projects-home.component.html
+++ b/angular/site-perso-corentin/src/app/projects/projects-home/projects-home.component.html
@@ -1,8 +1,12 @@
-<div class="container" [ngClass]="theme">
-  <div class="centrer">
-    <div><h1 [ngClass]="routeAnimationsElements">Projects</h1></div>
-  </div>
-  <div class="row justify-content-center">
-    <img src="../../../assets/comingsoon.jpg" style="max-width: 100%" [ngClass]="routeAnimationsElements">
+<div [ngClass]="theme">
+  <div class="projects">
+    <div class="container">
+      <div class="centrer">
+        <div><h1 [ngClass]="routeAnimationsElements">Projects</h1></div>
+      </div>
+      <div class="row justify-content-center">
+        <img src="../../../assets/comingsoon.jpg" style="max-width: 100%" [ngClass]="routeAnimationsElements">
+      </div>
+    </div>
   </div>
 </div>
