--- a/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss-theme.scss
+++ b/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss-theme.scss
@@ -7,11 +7,12 @@
   $background: map-get($theme, background);
 
 
-
-  h1{
-    background-color: mat-color($primary, darker, 0.3);
-    color: mat-color($foreground, h1);
-    border: solid 2px mat-color($foreground, h1);
+  .skills {
+    h1 {
+      //background-color: mat-color($primary, darker, 0.3);
+      color: mat-color($foreground, h1);
+      //border: solid 2px mat-color($foreground, h1);
+    }
   }
 
 }
