--- a/angular/site-perso-corentin/src/app/hobbies/hobbies/hobbies.component.html
+++ b/angular/site-perso-corentin/src/app/hobbies/hobbies/hobbies.component.html
@@ -1,8 +1,12 @@
-<div class="container" [ngClass]="theme">
+<div [ngClass]="theme">
+  <div class="hobbies">
+    <div class="container">
   <div class="centrer">
     <div><h1 [ngClass]="routeAnimationsElements">Hobbies</h1></div>
   </div>
   <div class="row justify-content-center">
     <img src="../../../assets/comingsoon.jpg" style="max-width: 100%" [ngClass]="routeAnimationsElements">
+  </div>
+</div>
   </div>
 </div>
