--- a/angular/site-perso-corentin/src/app/skills/skills-list/skills-list.component.html
+++ b/angular/site-perso-corentin/src/app/skills/skills-list/skills-list.component.html
@@ -1,3 +1,8 @@
-<spc-progress-bar *ngFor="let rank of ranks"
-                [rank]="rank"  [logo]="'../../../assets/skills/angular.png'">
-</spc-progress-bar>
+<div class="row" *ngFor="let skill of skills">
+  <div class="col-2">{{skill.name}}</div>
+  <div class="col-10">
+    <spc-progress-bar [rank]="skill.mark" [logo]="'../../../assets/skills/angular.png'">
+    </spc-progress-bar>
+  </div>
+</div>
+
