--- a/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.html
+++ b/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.html
@@ -1,28 +1,43 @@
-<div [ngClass]="theme">
+<div [ngClass]="theme" xmlns="http://www.w3.org/1999/html">
   <div class="skills">
     <div class="container">
       <div class="centrer">
-        <div><h1 [ngClass]="routeAnimationsElements">Skills</h1></div>
+        <div><h1>Skills</h1></div>
       </div>
-      <mat-tab-group>
-        <mat-tab label="Languages">
-          <h2>Programming Languages</h2>
-          <spc-skills-list [skills]="skills.language"></spc-skills-list>
+      <mat-tab-group [dynamicHeight]="true" [selectedIndex]='skillType$ | async | activeSkill'>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="mat-tab-label" (click)="goTo('languages')">Languages</span>
+          </ng-template>
+              <h2 [ngClass]="routeAnimationsElements"> <mat-icon svgIcon="code"></mat-icon>Programming Languages</h2>
+              <spc-skills-list [skills]="skills.language"></spc-skills-list>
         </mat-tab>
-        <mat-tab label="Web">
-          <h2>Web</h2>
-          <spc-skills-list></spc-skills-list>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="mat-tab-label" (click)="goTo('web')">Web</span>
+          </ng-template>
+          <h2 [ngClass]="routeAnimationsElements"><mat-icon svgIcon="web"></mat-icon>Web</h2>
+          <spc-web-skills-list [skillsLists]="skills.web"></spc-web-skills-list>
         </mat-tab>
-        <mat-tab label="AI">
-          <h2>Artificial Intelligence</h2>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="mat-tab-label" (click)="goTo('ai')">A.I.</span>
+          </ng-template>
+          <h2 [ngClass]="routeAnimationsElements"><mat-icon svgIcon="ai"></mat-icon>Artificial Intelligence</h2>
           <spc-skills-list [skills]="skills.ia"></spc-skills-list>
         </mat-tab>
-        <mat-tab label="Graphical">
-          <h2>Graphical</h2>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="mat-tab-label" (click)="goTo('graphical')">Graphical</span>
+          </ng-template>
+          <h2 [ngClass]="routeAnimationsElements"><mat-icon svgIcon="paint"></mat-icon>Graphical</h2>
           <spc-skills-list [skills]="skills.graphical"></spc-skills-list>
         </mat-tab>
-        <mat-tab label="Other">
-          <h1>Other</h1>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="mat-tab-label" (click)="goTo('other')">Other</span>
+          </ng-template>
+          <h2 [ngClass]="routeAnimationsElements"><mat-icon svgIcon="tech"></mat-icon>Other</h2>
           <spc-skills-list [skills]="skills.other"></spc-skills-list>
         </mat-tab>
       </mat-tab-group>
