--- a/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss
+++ b/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss
@@ -19,6 +19,33 @@
     padding: 10px;
     margin: 0;
   }
+
+  h2{
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+
+
+    mat-icon{
+      margin-right: 10px;
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .mat-tab-body-active{
+    overflow:hidden;
+  }
+
+  .mat-tab-label{
+    font-size: 1.6em;
+  }
+
+
+
+
 }
 
 @media (max-width: map-get($grid-breakpoints, sm)) {
