--- a/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss-theme.scss
+++ b/angular/site-perso-corentin/src/app/skills/skills-home/skills-home.component.scss-theme.scss
@@ -13,6 +13,32 @@
       color: mat-color($foreground, h1);
       //border: solid 2px mat-color($foreground, h1);
     }
+
+    h2 {
+      color: mat-color($foreground, h2);
+    }
+
+    h3 {
+      color: mat-color($foreground, p);
+    }
+
+    h4{
+      color: mat-color($foreground, text2);
+    }
+
+    p{
+      color: mat-color($foreground, text);
+    }
+
+    .mat-button {
+      background-color: mat-color($accent);
+      color: mat-contrast($accent, 900);
+    }
+
+    .mat-button:hover {
+      background-color: mat-color($accent, darker);
+      color: mat-contrast($accent, 900);
+    }
   }
 
 }
