--- a/angular/site-perso-corentin/src/app/skills/skills-list/skills-list.component.scss
+++ b/angular/site-perso-corentin/src/app/skills/skills-list/skills-list.component.scss
@@ -1,1 +1,43 @@
 @import '../../../styles-variables';
+
+
+.row{
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+
+
+h3{
+  text-align: center;
+}
+
+h4{
+  font-size: 1.5em;
+  text-decoration: underline;
+  white-space: nowrap;
+}
+
+p{
+  font-size: 1.3em;
+  text-align: justify;
+}
+
+.mat-button{
+  font-size: 1.1em;
+}
+
+mat-card{
+  margin-bottom: 20px;
+}
+.skill-name{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: map-get($grid-breakpoints, lg)){
+  .skill-name{
+    margin-bottom: -20px;
+  }
+}
