spc: projects: rooting

--- a/angular/site-perso-corentin/src/app/home/home.component.html
+++ b/angular/site-perso-corentin/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <!--<img src="../../assets/abstract-wallpaper.png" style="width: 100%">-->
-
 <div class="background">
   <div class="gradient">
     <div class="container">
@@ -10,6 +9,7 @@
   </div>
 </div>
 <div class="container">
+  <!-- Works for including '#' -->
   <p [ngClass]="routeAnimationsElements">
     I am a french engineering student at <a href="https://www.mines-stetienne.fr/">Mines Saint-Etienne</a>.
     I majored in Computer Sciences and Artificial Intelligence during the past year.
