--- a/booking-room-me/brme-client/src/app/settings/components/user-form/user-form.component.html
+++ b/booking-room-me/brme-client/src/app/settings/components/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Créer un nouvel utilisateur</mat-card-title>
+  <mat-card-title>{{verb}} un utilisateur</mat-card-title>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="submit()">
       <p>
@@ -32,14 +32,14 @@
 
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="N° de logement" formControlName="bedroomnumber">
-          <mat-error *ngIf="bedroomnumber.invalid">{{getErrorMessage(bedroomnumber)}}</mat-error>
+          <input type="text" matInput placeholder="N° de logement" formControlName="bedRoomNumber">
+          <mat-error *ngIf="bedRoomNumber.invalid">{{getErrorMessage(bedRoomNumber)}}</mat-error>
         </mat-form-field>
       </p>
 
       <p>
         <mat-form-field>
-          <mat-select placeholder="Droits" formControlName="role" [ngModel]="role.value">
+          <mat-select placeholder="Droits" formControlName="role">
             <mat-option value='USER'>Utilisateur classique</mat-option>
             <mat-option value='ROLE_ASSO'>Association</mat-option>
             <mat-option value='ROLE_ADMIN'>Administrateur</mat-option>
@@ -57,7 +57,7 @@
       </p>
 
       <p class="loginButtons">
-        <mat-spinner *ngIf="ispending" [diameter]="35" ></mat-spinner><button class="ml-2" type="submit" mat-raised-button color="accent" [disabled]="form.invalid">Créer</button>
+        <mat-spinner *ngIf="ispending" [diameter]="35" ></mat-spinner><button class="ml-2" type="submit" mat-raised-button color="accent" [disabled]="form.invalid">{{verb}}</button>
       </p>
 
     </form>
